--- a/index.html
+++ b/index.html
@@ -5,16 +5,14 @@
 <head>
 
   <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Train Scheduler</title>
-
-  <!-- Bootstrap -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
 
   <!-- Firebase Reference -->
-  <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
-    
+  <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase.js"></script>
+  
   <!-- Moment.js Reference -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
 
@@ -52,6 +50,8 @@
                   <th scope="col">Minutes Away</th>
                 </tr>
               </thead>
+              <tbody>
+              </tbody>
             </table>
           </div>
         </div>
@@ -78,7 +78,7 @@
               </div>
               <div class="form-group">
                 <label for="train-time-input">First Train Time (HH:mm - military time)</label>
-                <input class="form-control" id="train-name-input" placeholder="Better late than never" type="text">
+                <input class="form-control" id="train-time-input" placeholder="Better late than never" type="text">
               </div>
               <div class="form-group">
                 <label for="frequency-input">Frequency (min)</label>
@@ -94,6 +94,8 @@
 
   </div>
 
+  <!--JQuery-->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <!--JavaScript-->
   <script src="javascript/logic.js"></script>
 
